Add built files for GitHub Pages

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Guidance Widget</title>
-    <link rel="stylesheet" href="/dist/style.css">
+    <link rel="stylesheet" href="./dist/style.css">
 </head>
 <body>
     <div id="widget-container"></div>
-    <script src="/dist/vue-widget.umd.js"></script>
+    <script src="./dist/vue-widget.umd.js"></script>
     <script>
         // Initialize the widget
         const widget = new VueWidget({
