--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Guidance Widget</title>
-    <link rel="stylesheet" href="./dist/style.css">
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-    <div id="widget-container"></div>
-    <script src="./dist/vue-widget.umd.js"></script>
+    <div id="widget-container" style="max-width: 600px; margin: 2rem auto;"></div>
+    <script src="dist/vue-widget.umd.js"></script>
     <script>
-        // Initialize the widget
-        const widget = new VueWidget({
-            target: '#widget-container',
-            props: {
-                // Add any configuration options here
+        document.addEventListener('DOMContentLoaded', function() {
+            try {
+                const widget = new VueWidget({
+                    target: '#widget-container',
+                    props: {
+                        // Add any configuration options here
+                    }
+                });
+                console.log('Widget initialized successfully');
+            } catch (error) {
+                console.error('Error initializing widget:', error);
             }
         });
     </script>
