--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Guidance Widget</title>
     <link rel="stylesheet" href="dist/style.css">
+    <style>
+        body {
+            font-family: system-ui, -apple-system, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f5f5f5;
+        }
+        #widget-container {
+            max-width: 600px;
+            margin: 2rem auto;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
-    <div id="widget-container" style="max-width: 600px; margin: 2rem auto;"></div>
+    <div id="widget-container"></div>
     <script src="dist/vue-widget.umd.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
+            console.log('DOM loaded, initializing widget...');
+            
             try {
+                // Check if VueWidget is available
+                if (typeof VueWidget === 'undefined') {
+                    throw new Error('VueWidget is not defined. Check if the script loaded correctly.');
+                }
+
                 const widget = new VueWidget({
                     target: '#widget-container',
-                    props: {
-                        // Add any configuration options here
-                    }
+                    config: {
+                        logo: 'images/logo.svg',
+                        colors: {
+                            primary: '#470FF4',
+                            secondary: '#89AAE6',
+                            background: '#EBFFED',
+                            text: '#2E3532',
+                            accent: '#2F242C'
+                        }
+                    },
+                    headerText: 'MyHR',
+                    isDarkMode: window.matchMedia('(prefers-color-scheme: dark)').matches
                 });
-                console.log('Widget initialized successfully');
+
+                console.log('Widget instance created, mounting...');
+                widget.mount();
+                console.log('Widget mounted successfully');
             } catch (error) {
                 console.error('Error initializing widget:', error);
+                document.getElementById('widget-container').innerHTML = `
+                    <div style="padding: 20px; color: #721c24; background-color: #f8d7da; border-radius: 8px;">
+                        <h3>Error Loading Widget</h3>
+                        <p>${error.message}</p>
+                        <p>Please check the console for more details.</p>
+                    </div>
+                `;
             }
         });
     </script>
